--- a/Pipfile
+++ b/Pipfile
@@ -7,12 +7,12 @@ name = "pypi"
 
 [packages]
 
-Django = "==1.10.8"
+django = "==1.10.8"
 django-environ = "==0.4.4"
 django-crispy-forms = "==1.7.0"
 django-model-utils = "==3.0.0"
-Pillow = "==4.3.0"
-"argon2_cffi" = "==16.3.0"
+pillow = "==4.3.0"
+"argon2-cffi" = "==16.3.0"
 django-allauth = "==0.34.0"
 "psycopg2" = "==2.7.3.2"
 awesome-slugify = "==1.6.5"
@@ -20,16 +20,17 @@ pytz = "==2017.3"
 django-redis = "==4.8.0"
 redis = ">=2.10.5"
 coverage = "==4.4.2"
-django_coverage_plugin = "==1.5.0"
-Sphinx = "==1.6.5"
+django-coverage-plugin = "==1.5.0"
+sphinx = "==1.6.5"
 django-extensions = "==1.9.8"
-Werkzeug = "==0.13"
+werkzeug = "==0.13"
 django-test-plus = "==1.0.21"
-factory_boy = "==2.9.2"
+factory-boy = "==2.9.2"
 django-debug-toolbar = "==1.9.1"
 ipdb = "==0.10.3"
 pytest-django = "==3.1.2"
 pytest-sugar = "==0.9.0"
+djangorestframework = "*"
 
 
 [dev-packages]
