--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,7 @@ ipdb = "==0.10.3"
 pytest-django = "==3.1.2"
 pytest-sugar = "==0.9.0"
 djangorestframework = "*"
+django-taggit = "*"
 
 
 [dev-packages]
