--- a/.gitignore
+++ b/.gitignore
@@ -306,3 +306,8 @@ pip-selfcheck.json
 sukhwagram/media/
 
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
