--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,7 @@ django-taggit-serializer = "*"
 django-rest-auth = "*"
 django-cors-headers = "*"
 django-imagekit = "*"
+awsebcli = "*"
 
 
 [dev-packages]
